--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Test for Brocoders</title>
-  <link href="./css/main.css" rel="stylesheet">
+  <link rel="import" href="./broc/broccomponent.html">
 </head>
 <body>
 
-<div id="app"></div>
-
-<script src="./js/table.js"></script>
-  <script src="./js/app.js" defer></script>
+<broc-component rows="4" cols="4" style="display: inline-block; float: left"></broc-component>
+<broc-component rows="3" cols="3"></broc-component>
 
 </body>
 </html>
