--- a/broc/broccomponent.html
+++ b/broc/broccomponent.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <body>
-  <template id="tmpl">
+  <template id="broc_tmpl">
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
       .broc__component {
         overflow-x: auto;
         display: flex;
@@ -13,75 +18,54 @@
         background-color: white;
       }
 
-      .broc__div-delcol {
-        min-height: 56px;
-        margin: 0 0 -6px 0;
-      }
-
-      .broc__div-delrow {
-        min-width: 56px;
-        margin: 0 -2px 0 0;
-      }
-
       .broc__div-center {
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
         align-items: flex-start;
-        flex-shrink: 0;
       }
 
       .broco__table {
         border: 1px solid #729ea7;
         border-spacing: 2px;
-        bottom: 60px;
-        flex-shrink: 0;
       }
 
       .broco__table-elem {
-        margin: 0;
-        padding: 0;
-        width: 50px;
-        height: 50px;
-        text-align: center;
+        width: 48px;
+        height: 48px;
         background-color: #48aae9;
         flex-shrink: 0;
       }
 
       .broco__button {
         display: inline-block;
-        width: 50px;
-        height: 50px;
+        width: 52px;
+        height: 52px;
         color: white;
-        border: none;
         outline: none;
         font-size: 25px;
         font-weight: 500;
         text-align: center;
         transition: opacity 350ms ease-in-out;
-        position: relative;
+        border: 2px solid white;
       }
 
-      .broco__button-del.row {
-        border-right: inset 2px white;
-        margin: 3px 0 0 4px;
-        flex-shrink: 0;
+      .broc__div-delcol {
+        min-height: 52px;
+        margin-left: 53px;
       }
 
-      .broco__button-del.col {
-        border-bottom: inset 2px white;
-        margin: 0 0 0 57px;
+      .broc__div-delrow {
+        min-width: 52px;
+        margin-top: 1px;
       }
 
-      .broco__button-add.col {
-        margin-top: 3px;
-        margin-left: 2px;
-        flex-shrink: 0;
+      .broco__button-addcol {
+        margin-top: 1px;
       }
 
-      .broco__button-add.row {
-        margin-left: 57px;
-        margin-top: 2px;
+      .broco__button-addrow {
+        margin-left: 52px;
       }
 
       .broco__button:hover {
@@ -104,17 +88,17 @@
 
     <div class="broc__component">
       <div class="broc__div-delcol">
-        <button class="broco__button broco__button-del broco__button-del-hidden col">-</button>
+        <button class="broco__button broco__button-del broco__button-delcol broco__button-del-hidden">-</button>
       </div>
       <div class="broc__div-center">
         <div class="broc__div-delrow">
-          <button class="broco__button broco__button-del broco__button-del-hidden row">-</button>
+          <button class="broco__button broco__button-del broco__button-delrow broco__button-del-hidden">-</button>
         </div>
         <table class="broco__table"></table>
-        <button class="broco__button broco__button-add col">+</button>
+        <button class="broco__button broco__button-add broco__button-addcol">+</button>
       </div>
       <div class="broc__div-end">
-        <button class="broco__button broco__button-add row">+</button>
+        <button class="broco__button broco__button-add broco__button-addrow">+</button>
       </div>
     </div>
 
