--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<broc-component rows="4" cols="4" style="display: inline-block; float: left"></broc-component>
+<broc-component rows="4" cols="4"></broc-component>
 <broc-component rows="3" cols="3"></broc-component>
 
 </body>
