--- a/broc/broccomponent.html
+++ b/broc/broccomponent.html
@@ -33,12 +33,13 @@
       .broco__table-elem {
         width: 48px;
         height: 48px;
+        min-width: 48px;
+        min-height: 48px;
         background-color: #48aae9;
         flex-shrink: 0;
       }
 
       .broco__button {
-        display: inline-block;
         width: 52px;
         height: 52px;
         color: white;
